# lseval

./: README.md  pyproject.toml  schema.xml
src/lseval/: adjudication.py  correctness_matrix.py  datatypes.py  score.py  utils.py
