[project]
name = "lseval"
version = "0.1.0"
description = "Anaforatools but for Label Studio."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ruff",
  "ty"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",
    # additional options
    "I",   # isort
    "UP",  # pyupgrade
    "G",   # logging
    "FA",  # future annotations
    "PIE", # misc
]

[tool.uv.sources]
lseval = { workspace = true }

[dependency-groups]
lint = [
    "ruff==0.7.1", # same as pre-commit hook and CI
]
test = [
    "pytest>=8.3.3",
    "lseval",
    "pytest-dependency>=0.6.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "pre-commit>=4.0.1",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["lseval*"]